# mlx-graphs

./: .buildinfo  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  LICENSE  README.md  example.py  explore.ipynb  genindex.html  index.html  install.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linting_and_tests.yml  publish_docs.yml  pull_request.yml  pull_request_linting.yml  pull_request_workflow.yml  push_update_docs.yml  release.yml  run-tests.yml  testing.yml
_modules/: index.html
_sources/: index.rst
_static/: documentation_options.js
api/algorithms/: index.html
api/data/: batch.html  data.html  index.html  utils.html
api/datasets/: index.html
api/loaders/: index.html
api/nn/: index.html
api/transforms/: index.html
api/utils/: array_ops.html  convert.html  index.html  scatter.html  sorting.html  topology.html  transformations.html  validators.html
benchmark/: README.md  benchmark_layers.py  benchmark_utils.py  run_benchmark.py
benchmark/results/: average_benchmark.md  detailed_benchmark.md
benchmarks/: README.md
benchmarks/architectural/: README.md
benchmarks/col_vs_row_edge_index/: README.md  col_index_functions.py  launcher.py  row_index_functions.py
benchmarks/coo_vs_csr_edge_index/: README.md  coo_functions.py  csr_functions.py  launcher.py  results.md
benchmarks/framework_comparison/: README.md
benchmarks/mlx_graphs_vs_torch_geometric/: README.md  benchmark_layers.py  benchmark_utils.py  launcher.py  profile_mlx.py  training_pipeline.py
benchmarks/profiling/: README.md  profile_training.py
benchmarks/random_walk_benchmark/: Random-walk_benchmarks.ipynb
docs/: .gitignore  README.md
docs/source/: conf.py  index.rst  install.rst
examples/: GINE.ipynb  dictionary_lookup.py  gat.py  gcn.py  gin.py  graph_network_block.py
mlx_graphs/: typing.py
mlx_graphs/algorithms/: node2vec.py
mlx_graphs/data/: __init__.py  batch.py  collate.py  data.py  dataloaders.py  dataset.py  heteroData.py  hetero_data.py  utils.py
mlx_graphs/datasets/: IMDB.py  __init__.py  base_dataset.py  dataset.py  dblp.py  elliptic.py  gnn_benchmark_dataset.py  heteroGraphDataset.py  hetero_dataset.py  imdb.py  karate_club.py  lanl_dataset.py  lazy_dataset.py  movie_lens_100k.py  ogb_dataset.py  planetoid.py  qm7b.py  superpixel.py  tu_dataset.py  utils.py
mlx_graphs/loaders/: __init__.py  dataloaders.py  neighbor_loader.py  samplers.py
mlx_graphs/nn/: __init__.py  graph_network_block.py  linear.py  message_passing.py
mlx_graphs/sampler/: neighbor_sampler.py
mlx_graphs/sampling/: __init__.py  neighbor_sampler.py
mlx_graphs/transforms/: __init__.py  base_transform.py  normalize_features.py
mlx_graphs/utils/: __init__.py  array_ops.py  cache.py  convert.py  fs.py  gather.py  inits.py  misc.py  scatter.py  sorting.py  topology.py  transformations.py  utils.py  validators.py
tests/: conftest.py  test_transformations.py
tests/algorithms/: test_node2vec.py
tests/batch/: test_batch.py
tests/data/: test_batch.py  test_data.py  test_dataloaders.py  test_heteroData.py  test_hetero_data.py  test_neighbor_loader.py  test_utils.py
tests/datasets/: test_dataset.py  test_dblp.py  test_elliptic.py  test_imdb.py  test_karate_club.py  test_lanl_dataset.py  test_lazy_dataset.py  test_movie_lens_100k.py  test_planetoid.py  test_qm7b.py  test_superpixel.py  test_tu_dataset.py
tests/loaders/: test_lazy_loader.py  test_samplers.py
tests/nn/: test_message_passing.py
tests/sampler/: test_neighbor_sampler.py  test_sampler.py
tests/sampling/: test_neighbor_sampler.py  test_sampler.py
tests/transforms/: test_normalize_features.py
tests/utils/: test_array_ops.py  test_convert.py  test_gcn.py  test_misc.py  test_scatter.py  test_sorting.py  test_topology.py  test_transformations.py  test_validators.py
tutorials/: quickstart.html
(+325 files in other folders)
