[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-graphs"
version = "0.0.5"
description = "Graph Neural Network library made for Apple Silicon"
authors = [{name="mlx-graphs contributors"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python",
]
dependencies = [
    "mlx==0.7.*; sys_platform == 'darwin'",
    "numpy==1.26.3",
    "requests==2.31.0",
    "fsspec==2024.2.0",
    "tqdm==4.66.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit==3.6.0",
]
test = [
  "pytest==7.4.4",
  "scipy==1.12.0",
]
docs = [
  "ipython==8.21.0",
  "sphinx==7.2.6",
  "sphinx-book-theme==1.1.0",
  "sphinx-autodoc-typehints==1.25.2",
  "nbsphinx==0.9.3",
  "sphinx-gallery==0.15.0",
]
benchmarks = [
  "scipy==1.12.0",
  "dgl==2.0.0",
  "torch==2.2.0",
  "torch_geometric==2.5.0",
]

[project.urls]
Homepage = "https://mlx-graphs.github.io/mlx-graphs/"
Documentation = "https://mlx-graphs.github.io/mlx-graphs/"
Repository = "https://github.com/mlx-graphs/mlx-graphs"
Issues = "https://github.com/mlx-graphs/mlx-graphs/issues"


[tool.ruff]
line-length = 88
indent-width = 4
select = ["F", "E", "W", "I001"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
